feat(app-vite&app-webpack): Mark more dependencies as peer (#13613)

--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -88,23 +88,42 @@
     "eslint": "^8.11.0",
     "eslint-plugin-n": "^15.0.0",
     "pinia": "^2.0.0",
-    "quasar": "^2.0.4",
+    "quasar": "^2.6.0",
     "ts-essentials": "^9.1.2",
+    "typescript": "~4.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "workbox-build": "^6.5.3"
   },
   "peerDependencies": {
     "electron-builder": "^22.0.0",
     "electron-packager": "^15.0.0",
+    "eslint": "^8.11.0",
+    "pinia": "^2.0.0",
+    "quasar": "^2.6.0",
     "vue": "^3.2.29",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.0",
+    "workbox-build": "^6.5.0"
   },
   "peerDependenciesMeta": {
     "electron-builder": {
       "optional": true
     },
     "electron-packager": {
+      "optional": true
+    },
+    "eslint": {
+      "optional": true
+    },
+    "pinia": {
+      "optional": true
+    },
+    "vuex": {
+      "optional": true
+    },
+    "workbox-build": {
       "optional": true
     }
   },
