--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -127,14 +127,26 @@
   "peerDependencies": {
     "electron-builder": "^22.0.0",
     "electron-packager": "^15.0.0",
+    "pinia": "^2.0.0",
     "vue": "^3.2.29",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.0",
+    "workbox-webpack-plugin": "^6.0.0"
   },
   "peerDependenciesMeta": {
     "electron-builder": {
       "optional": true
     },
     "electron-packager": {
+      "optional": true
+    },
+    "pinia": {
+      "optional": true
+    },
+    "vuex": {
+      "optional": true
+    },
+    "workbox-webpack-plugin": {
       "optional": true
     }
   },
