chore: reorganize types to first per spec

--- a/extras/package.json
+++ b/extras/package.json
@@ -9,104 +9,104 @@
   "exports": {
     ".": "./index.js",
     "./bootstrap-icons": {
+      "types": "./bootstrap-icons/index.d.ts",
       "import": "./bootstrap-icons/index.mjs",
-      "require": "./bootstrap-icons/index.js",
-      "types": "./bootstrap-icons/index.d.ts"
+      "require": "./bootstrap-icons/index.js"
     },
     "./eva-icons": {
+      "types": "./eva-icons/index.d.ts",
       "import": "./eva-icons/index.mjs",
-      "require": "./eva-icons/index.js",
-      "types": "./eva-icons/index.d.ts"
+      "require": "./eva-icons/index.js"
     },
     "./fontawesome-v5": {
+      "types": "./fontawesome-v5/index.d.ts",
       "import": "./fontawesome-v5/index.mjs",
-      "require": "./fontawesome-v5/index.js",
-      "types": "./fontawesome-v5/index.d.ts"
+      "require": "./fontawesome-v5/index.js"
     },
     "./fontawesome-v6": {
+      "types": "./fontawesome-v6/index.d.ts",
       "import": "./fontawesome-v6/index.mjs",
-      "require": "./fontawesome-v6/index.js",
-      "types": "./fontawesome-v6/index.d.ts"
+      "require": "./fontawesome-v6/index.js"
     },
     "./ionicons-v4": {
+      "types": "./ionicons-v4/index.d.ts",
       "import": "./ionicons-v4/index.mjs",
-      "require": "./ionicons-v4/index.js",
-      "types": "./ionicons-v4/index.d.ts"
-    },
+      "require": "./ionicons-v4/index.js"
+    }
     "./ionicons-v5": {
+      "types": "./ionicons-v5/index.d.ts",
       "import": "./ionicons-v5/index.mjs",
-      "require": "./ionicons-v5/index.js",
-      "types": "./ionicons-v5/index.d.ts"
+      "require": "./ionicons-v5/index.js"
     },
     "./ionicons-v6": {
+      "types": "./ionicons-v6/index.d.ts",
       "import": "./ionicons-v6/index.mjs",
-      "require": "./ionicons-v6/index.js",
-      "types": "./ionicons-v6/index.d.ts"
+      "require": "./ionicons-v6/index.js"
     },
     "./line-awesome": {
+      "types": "./line-awesome/index.d.ts",
       "import": "./line-awesome/index.mjs",
-      "require": "./line-awesome/index.js",
-      "types": "./line-awesome/index.d.ts"
+      "require": "./line-awesome/index.js"
     },
     "./material-icons": {
+      "types": "./material-icons/index.d.ts",
       "import": "./material-icons/index.mjs",
-      "require": "./material-icons/index.js",
-      "types": "./material-icons/index.d.ts"
+      "require": "./material-icons/index.js"
     },
     "./material-icons-outlined": {
+      "types": "./material-icons-outlined/index.d.ts",
       "import": "./material-icons-outlined/index.mjs",
-      "require": "./material-icons-outlined/index.js",
-      "types": "./material-icons-outlined/index.d.ts"
+      "require": "./material-icons-outlined/index.js"
     },
     "./material-icons-round": {
+      "types": "./material-icons-round/index.d.ts",
       "import": "./material-icons-round/index.mjs",
-      "require": "./material-icons-round/index.js",
-      "types": "./material-icons-round/index.d.ts"
+      "require": "./material-icons-round/index.js"
     },
     "./material-icons-sharp": {
+      "types": "./material-icons-sharp/index.d.ts",
       "import": "./material-icons-sharp/index.mjs",
-      "require": "./material-icons-sharp/index.js",
-      "types": "./material-icons-sharp/index.d.ts"
+      "require": "./material-icons-sharp/index.js"
     },
     "./material-symbols-outlined": {
+      "types": "./material-symbols-outlined/index.d.ts",
       "import": "./material-symbols-outlined/index.mjs",
-      "require": "./material-symbols-outlined/index.js",
-      "types": "./material-symbols-outlined/index.d.ts"
+      "require": "./material-symbols-outlined/index.js"
     },
     "./material-symbols-round": {
+      "types": "./material-symbols-round/index.d.ts",
       "import": "./material-symbols-round/index.mjs",
-      "require": "./material-symbols-round/index.js",
-      "types": "./material-symbols-round/index.d.ts"
+      "require": "./material-symbols-round/index.js"
     },
     "./material-symbols-sharp": {
+      "types": "./material-symbols-sharp/index.d.ts",
       "import": "./material-symbols-sharp/index.mjs",
-      "require": "./material-symbols-sharp/index.js",
-      "types": "./material-symbols-sharp/index.d.ts"
+      "require": "./material-symbols-sharp/index.js"
     },
     "./mdi-v3": {
+      "types": "./mdi-v3/index.d.ts",
       "import": "./mdi-v3/index.mjs",
-      "require": "./mdi-v3/index.js",
-      "types": "./mdi-v3/index.d.ts"
+      "require": "./mdi-v3/index.js"
     },
     "./mdi-v4": {
+      "types": "./mdi-v4/index.d.ts",
       "import": "./mdi-v4/index.mjs",
-      "require": "./mdi-v4/index.js",
-      "types": "./mdi-v4/index.d.ts"
+      "require": "./mdi-v4/index.js"
     },
     "./mdi-v5": {
+      "types": "./mdi-v5/index.d.ts",
       "import": "./mdi-v5/index.mjs",
-      "require": "./mdi-v5/index.js",
-      "types": "./mdi-v5/index.d.ts"
+      "require": "./mdi-v5/index.js"
     },
     "./mdi-v6": {
+      "types": "./mdi-v6/index.d.ts",
       "import": "./mdi-v6/index.mjs",
-      "require": "./mdi-v6/index.js",
-      "types": "./mdi-v6/index.d.ts"
+      "require": "./mdi-v6/index.js"
     },
     "./themify": {
+      "types": "./themify/index.d.ts",
       "import": "./themify/index.mjs",
-      "require": "./themify/index.js",
-      "types": "./themify/index.d.ts"
+      "require": "./themify/index.js"
     },
     "./*": "./*"
   },
