--- a/create-quasar/templates/app/quasar-v2/ts-vite/BASE/_tsconfig.json
+++ b/create-quasar/templates/app/quasar-v2/ts-vite/BASE/_tsconfig.json
@@ -1,22 +1,8 @@
 {
   "extends": "@quasar/app-vite/tsconfig-preset",
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "src/*": ["src/*"],
-      "app/*": ["*"],
-      "components/*": ["src/components/*"],
-      "layouts/*": ["src/layouts/*"],
-      "pages/*": ["src/pages/*"],
-      "assets/*": ["src/assets/*"],
-      "boot/*": ["src/boot/*"],
-      "stores/*": ["src/stores/*"]
-    }<% if (typescriptConfig === 'class') { %>,
+    "baseUrl": "."<% if (typescriptConfig === 'class') { %>,
     "experimentalDecorators": true,
     "useDefineForClassFields": true<% } %>
-  },
-  "include": [
-    "src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue",
-    "src-pwa/*.d.ts", "src-bex/*.d.ts", "src-ssr/*.d.ts"
-  ]
+  }
 }
