--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -49,6 +49,7 @@
     "@quasar/babel-preset-app": "2.0.1",
     "@quasar/fastclick": "1.1.5",
     "@quasar/ssr-helpers": "2.2.0",
+    "@types/chrome": "^0.0.191",
     "@types/compression": "^1.7.2",
     "@types/cordova": "0.0.34",
     "@types/express": "4.17.13",
