--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -69,8 +69,7 @@
     "inquirer": "^8.2.1",
     "isbinaryfile": "^4.0.8",
     "kolorist": "^1.5.1",
-    "lodash.debounce": "^4.0.8",
-    "lodash.template": "^4.5.0",
+    "lodash": "^4.17.21",
     "minimist": "^1.2.6",
     "open": "^8.4.0",
     "ouch": "^2.0.0",
