--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -81,9 +81,7 @@
     "isbinaryfile": "4.0.8",
     "launch-editor-middleware": "2.4.0",
     "loader-utils": "^2.0.0",
-    "lodash.debounce": "4.0.8",
-    "lodash.template": "4.5.0",
-    "lodash.throttle": "4.1.1",
+    "lodash": "^4.17.21",
     "log-update": "4.0.0",
     "mini-css-extract-plugin": "1.6.0",
     "minimist": "1.2.6",
