refactor(create-quasar): replace lodash.* with lodash

--- a/create-quasar/package.json
+++ b/create-quasar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-quasar",
-  "version": "1.0.23",
+  "version": "1.0.24",
   "description": "Scaffolds Quasar Apps, AppExtensions or UI kits",
   "author": {
     "name": "Razvan Stoenescu",
@@ -32,7 +32,7 @@
     "fast-glob": "^3.2.11",
     "fs-extra": "^10.0.1",
     "kolorist": "^1.5.1",
-    "lodash.template": "^4.5.0",
+    "lodash": "^4.17.21",
     "prompts": "^2.4.2"
   },
   "devDependencies": {
