--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/app",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "description": "Quasar Framework local CLI",
   "bin": {
     "quasar": "./bin/quasar"
@@ -104,12 +104,12 @@
     "ts-loader": "8.0.17",
     "typescript": "4.2.2",
     "url-loader": "4.1.1",
-    "vue": "2.7.0",
-    "vue-loader": "^15.9.7",
+    "vue": "^2.7.1",
+    "vue-loader": "^15.10.0",
     "vue-router": "3.5.3",
-    "vue-server-renderer": "2.7.0",
+    "vue-server-renderer": "^2.7.1",
     "vue-style-loader": "4.1.3",
-    "vue-template-compiler": "2.7.0",
+    "vue-template-compiler": "^2.7.1",
     "vuex": "3.6.2",
     "webpack": "4.44.2",
     "webpack-bundle-analyzer": "4.5.0",
