--- a/docs/package.json
+++ b/docs/package.json
@@ -20,17 +20,17 @@
     "quasar": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.13.14",
     "@quasar/app": "^2.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-loader": "^3.0.3",
+    "eslint": "^8.10.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-quasar": "^1.0.0",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.1.1",
+    "eslint-plugin-vue": "^9.0.0",
+    "eslint-webpack-plugin": "^2.0.0",
     "gray-matter": "^4.0.2",
     "markdown-ast": "^0.2.1",
     "markdown-it": "^10.0.0",
