--- a/app-webpack/tsconfig-preset.json
+++ b/app-webpack/tsconfig-preset.json
@@ -29,5 +29,5 @@
   },
   // Avoid files copied into 'dist' folder (eg. a `.d.ts` file inside `src-ssr` folder)
   // to be evaluated by TS when their original files has been updated
-  "exclude": ["/dist", ".quasar", "node_modules"]
+  "exclude": ["dist", ".quasar", "node_modules"]
 }
