--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -47,7 +47,7 @@
   },
   "dependencies": {
     "@quasar/fastclick": "1.1.5",
-    "@quasar/vite-plugin": "^1.0.9",
+    "@quasar/vite-plugin": "^1.1.1",
     "@rollup/pluginutils": "^4.1.2",
     "@types/chrome": "^0.0.191",
     "@types/compression": "^1.7.2",
@@ -80,7 +80,7 @@
     "semver": "^7.3.5",
     "serialize-javascript": "^6.0.0",
     "table": "^6.8.0",
-    "vite": "2.9.13",
+    "vite": "^2.9.13",
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
