--- a/app-webpack/templates/capacitor/package.json
+++ b/app-webpack/templates/capacitor/package.json
@@ -5,7 +5,9 @@
 <% if (pkg.author) { %>  "author": <%= JSON.stringify(pkg.author) %>,<% } %>
   "private": true,
   "dependencies": {
-    "@capacitor/cli": "^2.0.0",
-    "@capacitor/core": "^2.0.0"
+    "@capacitor/app": "^4.0.0",
+    "@capacitor/cli": "^4.0.0",
+    "@capacitor/core": "^4.0.0",
+    "@capacitor/splash-screen": "^4.0.0"
   }
 }
