--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -73,7 +73,6 @@
     "minimist": "^1.2.6",
     "open": "^8.4.0",
     "ouch": "^2.0.0",
-    "postcss": "^8.4.4",
     "register-service-worker": "^1.7.2",
     "rollup-plugin-visualizer": "^5.5.4",
     "sass": "1.32.12",
@@ -132,6 +131,13 @@
     "node": "^18 || ^16 || ^14.19",
     "npm": ">= 6.14.12",
     "yarn": ">= 1.17.3"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "rollup"
+      ]
+    }
   },
   "volta": {
     "node": "lts"
