--- a/app/package.json
+++ b/app/package.json
@@ -45,18 +45,18 @@
     "@quasar/babel-preset-app": "2.0.1",
     "@quasar/fastclick": "1.1.5",
     "@types/cordova": "0.0.34",
-    "@types/electron-packager": "14.0.0",
-    "@types/express": "4.17.13",
-    "@types/lru-cache": "5.1.0",
-    "@types/terser-webpack-plugin": "4.2.1",
-    "@types/webpack": "4.41.27",
-    "@types/webpack-bundle-analyzer": "3.9.2",
-    "@types/webpack-dev-server": "3.11.3",
+    "@types/electron-packager": "^14.0.0",
+    "@types/express": "^4.17.13",
+    "@types/lru-cache": "^5.1.0",
+    "@types/terser-webpack-plugin": "^4.2.1",
+    "@types/webpack": "^4.41.27",
+    "@types/webpack-bundle-analyzer": "^3.9.2",
+    "@types/webpack-dev-server": "^3.11.3",
     "archiver": "5.3.1",
     "autoprefixer": "9.8.6",
     "browserslist": "^4.20.2",
     "chalk": "4.1.1",
-    "chokidar": "3.5.3",
+    "chokidar": "^3.5.3",
     "ci-info": "2.0.0",
     "compression-webpack-plugin": "5.0.1",
     "copy-webpack-plugin": "6.3.2",
@@ -106,17 +106,17 @@
     "url-loader": "4.1.1",
     "vue": "^2.7.1",
     "vue-loader": "^15.10.0",
-    "vue-router": "3.5.3",
+    "vue-router": "^3.6.5",
     "vue-server-renderer": "^2.7.1",
-    "vue-style-loader": "4.1.3",
+    "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.1",
-    "vuex": "3.6.2",
-    "webpack": "4.44.2",
-    "webpack-bundle-analyzer": "4.5.0",
-    "webpack-chain": "6.5.1",
-    "webpack-dev-server": "3.11.3",
-    "webpack-merge": "4.2.2",
-    "webpack-node-externals": "2.5.2",
+    "vuex": "^3.6.2",
+    "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-chain": "^6.5.1",
+    "webpack-dev-server": "^3.11.3",
+    "webpack-merge": "^4.2.2",
+    "webpack-node-externals": "^2.5.2",
     "write-file-webpack-plugin": "4.5.1",
     "zlib": "1.0.5"
   },
