fix(ui): fix tests setup

--- a/ui/dev/.gitignore
+++ b/ui/dev/.gitignore
@@ -5,6 +5,7 @@ node_modules
 # Quasar core related directories
 .quasar
 /dist
+!quasar/dist
 
 # Cordova related directories and files
 /src-cordova/node_modules
