--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,7 @@
     "lint-fix": "eslint --ext .js,.vue src dev --fix",
     "test:build": "node build/script.build.js js api && node build/script.build.js js transforms",
     "test:component": "yarn test:build && cd ./dev && cypress open-ct && cd ..",
+    "test:component:run": "yarn test:build && cd ./dev && cypress run-ct && cd ..",
     "test:component:ci": "yarn test:build && cd ./dev && cypress run-ct --record --parallel && cd ..",
     "test:create": "node ./test/cypress/helpers/create-spec.js -c"
   },
