--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@quasar/app-vite",
+  "name": "@gustavotoyota/quasar-app-vite",
   "version": "1.1.3",
   "description": "Quasar Framework App CLI with Vite",
   "bin": {
