--- a/vite-plugin/package.json
+++ b/vite-plugin/package.json
@@ -32,9 +32,9 @@
     "rollup": "^2.58.0"
   },
   "peerDependencies": {
-    "@vitejs/plugin-vue": "^2.0.0 || ^3.0.0",
+    "@vitejs/plugin-vue": "^2.0.0 || ^3.0.0 || ^4.0.0",
     "quasar": "^2.8.0",
-    "vite": "^2.0.0 || ^3.0.0",
+    "vite": "^2.0.0 || ^3.0.0 || ^4.0.1",
     "vue": "^3.0.0"
   },
   "license": "MIT",
