--- a/docs/package.json
+++ b/docs/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "quasar dev",
     "dev:ssr": "quasar dev -m ssr",
-    "build": "node build/search/index.js && cp node_modules/quasar/dist/api/* public/quasar-api/ && quasar build -m ssr && cp src/examples/* public/examples/",
+    "build": "node build/search/index.js && cp node_modules/quasar/dist/api/* public/quasar-api/ && quasar build -m ssr && mkdir dist/quasar.dev/client/examples/ && cp -R src/examples/* dist/quasar.dev/client/examples/ && node build/ssg.js",
     "lint": "eslint --ext .js,.vue ./ --fix",
     "test": "echo \"No test specified\" && exit 0"
   },
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@quasar/app-vite": "^1.1.3",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.2.1",
     "eslint": "^8.30.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.19.1",
