--- a/cli/package.json
+++ b/cli/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@quasar/cli",
-  "version": "1.4.0",
-  "description": "Quasar Framework global CLI",
+  "version": "2.0.0",
+  "description": "Quasar Framework - the Global CLI",
   "bin": {
-    "quasar": "./bin/quasar"
+    "quasar": "./bin/quasar.js"
   },
   "files": [
     "assets",
@@ -37,39 +37,27 @@
     "type": "github",
     "url": "https://donate.quasar.dev"
   },
+  "type": "module",
   "engines": {
-    "node": ">= 12.0.0",
+    "node": ">= 14.8.0",
     "npm": ">= 5.6.0",
     "yarn": ">= 1.6.0"
   },
   "dependencies": {
-    "async": "^3.2.4",
     "ci-info": "^3.7.1",
     "compression": "^1.7.4",
-    "connect-history-api-fallback": "^1.6.0",
-    "consolidate": "0.16.0",
+    "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "cross-spawn": "^7.0.3",
-    "download-git-repo": "^3.0.2",
     "express": "^4.18.2",
-    "fs-extra": "^10.0.0",
-    "handlebars": "^4.7.7",
+    "fs-extra": "^11.1.0",
     "http-proxy-middleware": "^2.0.6",
-    "inquirer": "^8.2.0",
     "kolorist": "^1.6.0",
-    "metalsmith": "^2.5.1",
-    "minimatch": "^3.0.4",
     "minimist": "^1.2.7",
-    "multimatch": "^5.0.0",
-    "open": "7.0.4",
-    "ora": "5.4.0",
-    "read-metadata": "^1.0.0",
-    "rimraf": "^3.0.2",
+    "open": "8.4.0",
     "route-cache": "0.4.7",
     "selfsigned": "^2.0.0",
-    "tildify": "^2.0.0",
-    "update-notifier": "^5.1.0",
-    "validate-npm-package-name": "^3.0.0"
+    "update-notifier": "^6.0.2"
   },
   "publishConfig": {
     "access": "public"
