--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -128,7 +128,7 @@
     }
   },
   "engines": {
-    "node": "^18 || ^16 || ^14.19",
+    "node": "^24 || ^22 || ^20 || ^18 || ^16 || ^14.19",
     "npm": ">= 6.14.12",
     "yarn": ">= 1.17.3"
   },
