style(ui): Apply formatting using Prettier to types folder

--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "build": "node build/script.build.js",
     "lint": "eslint --ext .js,.vue src dev",
     "lint-fix": "eslint --ext .js,.vue src dev --fix",
+    "format:types": "prettier --write \"types/**/*.{d.ts,ts,json}\"",
     "test:build": "node build/script.build.js js api && node build/script.build.js js transforms",
     "test:component": "yarn test:build && cd ./dev && cypress open-ct && cd ..",
     "test:component:run": "yarn test:build && cd ./dev && cypress run-ct && cd ..",
@@ -90,7 +91,7 @@
     "fast-glob": "^3.2.7",
     "module-alias": "^2.2.2",
     "postcss-rtlcss": "^3.5.3",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.3",
     "recast": "^0.18.5",
     "rimraf": "^3.0.1",
     "rollup": "^2.34.0",
