build(ui): Ensure the generated TS code is valid

--- a/ui/package.json
+++ b/ui/package.json
@@ -96,6 +96,7 @@
     "rimraf": "^3.0.1",
     "rollup": "^2.34.0",
     "table": "^6.8.1",
+    "typescript": "^4.9.5",
     "uglify-es": "^3.3.9",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
