--- a/.github/workflows/process-created-issue.yml
+++ b/.github/workflows/process-created-issue.yml
@@ -77,6 +77,7 @@ jobs:
                 'Plugins': 'area/plugins',
                 'Composables': 'area/composables',
                 'Style & Identity': 'area/style',
+                'Accessibility [a11y]': 'area/a11y',
 
                 'Project Creation': 'area/project-creation',
                 'Quasar Extras': 'area/extras',
