ok, theory matched the practice, they can't do it, so we are safe :)

--- a/.github/workflows/comment-build-results.yml
+++ b/.github/workflows/comment-build-results.yml
@@ -23,7 +23,7 @@ jobs:
       }}
 
     outputs:
-      run-id: ${{ fromJSON(steps.current-workflow-run.outputs.result).id }}
+      run-id: ${{ steps.current-workflow-run.outputs.result.id }}
 
     steps:
       - name: Check current types build workflow run
