ci: Correctly filter the current workflow
on comment build results workflow. (Addition to #15379)

--- a/.github/workflows/comment-build-results.yml
+++ b/.github/workflows/comment-build-results.yml
@@ -36,6 +36,8 @@ jobs:
               repo: context.repo.repo,
               branch: 'dev', // TODO: Get the PR target branch to support branches other than dev
               workflow_id: 'build-types.yml',
+              event: 'push',
+              status: 'success',
             });
 
             return {
