ci: Remove non-existent yarn caching
in addition to https://github.com/quasarframework/quasar/pull/15334
it was causing errors

--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -19,8 +19,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: yarn
-          cache-dependency-path: docs/yarn.lock
+         # No caching because we are not checking lock files in
 
       - run: yarn install
         working-directory: docs
