--- a/create-quasar/package.json
+++ b/create-quasar/package.json
@@ -29,7 +29,6 @@
     "lint": "eslint --ext .js,.ts ./ --fix"
   },
   "dependencies": {
-    "@types/lodash.merge": "^4.6.7",
     "fast-glob": "^3.2.11",
     "fs-extra": "^10.0.1",
     "kolorist": "^1.5.1",
@@ -37,6 +36,7 @@
     "prompts": "^2.4.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.6.7",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.11.0",
