--- a/extras/package.json
+++ b/extras/package.json
@@ -43,6 +43,11 @@
       "import": "./ionicons-v6/index.mjs",
       "require": "./ionicons-v6/index.js"
     },
+    "./ionicons-v7": {
+      "types": "./ionicons-v7/index.d.ts",
+      "import": "./ionicons-v7/index.mjs",
+      "require": "./ionicons-v7/index.js"
+    },
     "./line-awesome": {
       "types": "./line-awesome/index.d.ts",
       "import": "./line-awesome/index.mjs",
@@ -152,7 +157,7 @@
     "eva-icons": "1.1.3",
     "fs-extra": "11.1.0",
     "glob": "8.1.0",
-    "ionicons": "6.1.3",
+    "ionicons": "7.1.0",
     "line-awesome": "1.3.0",
     "themify-icons": "https://github.com/lykmapipo/themify-icons",
     "@xmldom/xmldom": "0.8.6"
