--- a/create-quasar/package.json
+++ b/create-quasar/package.json
@@ -36,6 +36,7 @@
     "prompts": "^2.4.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.6.7",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.11.0",
