--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -57,6 +57,7 @@
     "archiver": "5.3.1",
     "autoprefixer": "10.4.13",
     "browserslist": "^4.12.0",
+    "alias-hq": "^2.0.1",
     "chalk": "4.1.2",
     "chokidar": "3.5.3",
     "ci-info": "3.7.1",
